# 3Body

./: .gitignore  Build_and_Run.sh  CMakeLists.txt  README.md
lib/: Amps.cpp  Amps.h  BasicFuncs.cpp  BasicFuncs.h  CMakeLists.txt  Coupled22.cpp  Coupled22.h  Free2Particle.cpp  Free2Particle.h  FreeSpec.cpp  FreeSpec.h
main/: CMakeLists.txt  free_2part.cpp  free_coupled22.cpp  intspec_coupled22.cpp
src/: BasicFuncs.cpp  BasicFuncs.h  BasicFuncs.hpp  main.cpp
src/free_2part_spec/: FreeSpec.cpp  FreeSpec.h
