cmake_minimum_required(VERSION 3.21.3 FATAL_ERROR)

project(3Body VERSION 1.0)

set(CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 20)

set(CMAKE_CXX_FLAGS "-O2")
set(CMAKE_C_FLAGS "-O2")
set(CMAKE_EXE_LINKER_FLAGS "-O2")

find_package(MPI REQUIRED)
message(STATUS "Run: ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${MPIEXEC_PREFLAGS} EXECUTABLE ${MPIEXEC_POSTFLAGS} ARGS")

find_package (Eigen3 3.3 REQUIRED NO_MODULE)

add_subdirectory(lib)
add_subdirectory(main)